Fixing formatting of overflowing code blocks

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -322,11 +322,14 @@ article header a
     line-height: 20px
     padding: 3px 5px
     border-radius: 3px
-  pre code
-    padding: 25px
-    margin: 25px -25px
-    display: block
-    border-radius: 0
+  pre 
+    code
+      width: 100%
+      padding: 25px
+      margin: 25px -25px
+      display: block
+      border-radius: 0
+      overflow: auto
   .footnotes
     margin: 0 -25px 0
     padding: 25px 25px 10px
